plugin crash

[GTK] Plugins sometimes crash WebKitGTK+ with Gdk-CRITICAL **: gdk_window_get_toplevel: assertion `GDK_IS_WINDOW (window)' failed
https://bugs.webkit.org/show_bug.cgi?id=73719

Patch by Martin Robinson <mrobinson@igalia.com> on 2011-12-15
Reviewed by Philippe Normand.

No new tests. It's difficult to test or reproduce this exact situation
as it only occurs when running plugins under nspluginwrapper.

* plugins/gtk/PluginViewGtk.cpp:
(WebCore::PluginView::platformGetValue): Properly handle when the plugin tries to
get the window value when the GtkSocket is no longer realized.

Canonical link: https://commits.webkit.org/91324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102958 268f45cc-cd09-0410-ab3c-d52691b4dbfc